src/test/ui/array-slice-vec/array_const_index-0.stderr
error: any use of this value will cause an error
  --> $DIR/array_const_index-0.rs:2:16
   |
LL | const B: i32 = (&A)[1];
   | ---------------^^^^^^^-
   |                |
   |                index out of bounds: the length is 0 but the index is 1
   |
   = note: `#[deny(const_err)]` on by default

error: aborting due to previous error

